--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
    <script src="Marshmallow/Marshmallow.js"></script>
 </head>
 <body>
-   
+   <h1>Marshmallow Alpha</h1>
+   <h2>m-btn: </h3>
+   <m-btn btn badge="9">
+      <span slot="badge">999909</span>
+      button
+   </m-btn>
+
 </body>
 </html>
