--- a/index.html
+++ b/index.html
@@ -10,14 +10,8 @@
    <!-- script -->
    <script src="Marshmallow/less.min.js"></script>
    <script src="Marshmallow/Marshmallow.js"></script>
+   <script src="Marshmallow/Elements.js" type="module"></script>
 </head>
 <body>
    <h1>Marshmallow Alpha</h1>
-   <h2>m-btn: </h3>
-   <m-btn btn badge="9">
-      <span slot="badge">999909</span>
-      button
-   </m-btn>
-
-</body>
 </html>
