--- a/index.html
+++ b/index.html
@@ -13,5 +13,23 @@
    <script src="Marshmallow/Elements.js" type="module"></script>
 </head>
 <body>
-   <h1>Marshmallow Alpha</h1>
+   
+   <m-app>
+      
+      <m-appbar>
+         <m-left>
+            <m-btn>0</m-btn>
+         </m-left>
+         <m-center>
+            <m-title> Marshmallow </m-title>
+            <m-subtitle> Alpha </m-subtitle>
+         </m-center>
+         <m-right>
+            <m-btn>1</m-btn>
+            <m-btn>2</m-btn>
+         </m-right>
+      </m-appbar>
+      
+   </m-app>
+   
 </html>
