--- a/index.html
+++ b/index.html
@@ -1,35 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
    <title>Marshmallow</title>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-   <!-- style -->
+   <!-- Marshmallow Alpha -->
+   <script type="module">
+      import Marshmallow from './Marshmallow/Marshmallow.js';
+      let M = new Marshmallow();
+   </script>
+   <!-- Less -->
    <link rel="stylesheet/less" href="Marshmallow/Marshmallow.less">
-   <!-- script -->
    <script src="Marshmallow/less.min.js"></script>
-   <script src="Marshmallow/Marshmallow.js"></script>
-   <script src="Marshmallow/Elements.js" type="module"></script>
 </head>
 <body>
    
    <m-app>
-      
-      <m-appbar>
-         <m-left>
-            <m-btn>0</m-btn>
-         </m-left>
-         <m-center>
-            <m-title> Marshmallow </m-title>
-            <m-subtitle> Alpha </m-subtitle>
-         </m-center>
-         <m-right>
-            <m-btn>1</m-btn>
-            <m-btn>2</m-btn>
-         </m-right>
-      </m-appbar>
-      
+      <h1> Hello Marshmallow </h1>
    </m-app>
    
+   
+</body>
 </html>
