--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
 </head>
 <body>
    
-   <m-app>
+   <m-app style="padding: 16px">
       <h1> Hello Marshmallow </h1>
    </m-app>
-   
-   
 </body>
 </html>
