--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
 </head>
 <body>
    
-   <m-app style="padding: 16px">
+   <m-app  style="padding: 16px">
       <h1> Hello Marshmallow </h1>
+      <h2><pre>&lt;m-button></pre></h2>
+
+      <m-button> Button </m-button>
+      
+      
    </m-app>
 </body>
 </html>
