--- a/index.html
+++ b/index.html
@@ -10,13 +10,10 @@
       import Marshmallow from './Marshmallow/Marshmallow.js';
       let M = new Marshmallow();
    </script>
-   <!-- Less -->
-   <link rel="stylesheet/less" href="Marshmallow/Marshmallow.less">
-   <script src="Marshmallow/less.min.js"></script>
 </head>
 <body>
    
-   <m-app  style="padding: 16px">
+   <m-app background="pink" style="padding: 16px">
       <h1> Hello Marshmallow </h1>
       <h2><pre>&lt;m-button></pre></h2>
 
