--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
 </head>
 <body>
    
-   <m-app background="pink" style="padding: 16px">
+   <m-app style="padding: 16px">
       <h1> Hello Marshmallow </h1>
       <h2><pre>&lt;m-button></pre></h2>
 
-      <m-button> Button </m-button>
-      
+      <m-button> Button </m-button> <br> <br>
+      <m-button color="@Primary"> Primary Button </m-button> <br> <br>
+      <m-button color="@Secondary"> Secondary Button </m-button> <br> <br>
+      <m-button color="@Tertiary"> Tertiary Button </m-button> <br> <br>
+      <m-button color="@Error"> Error Button </m-button> <br> <br>
+      <m-button color="@Surface"> Surface Button </m-button> <br> <br>
       
    </m-app>
 </body>
