--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
    <title>Marshmallow</title>
    <meta charset="UTF-8">
@@ -11,19 +12,22 @@
       let M = new Marshmallow();
    </script>
 </head>
-<body>
-   
-   <m-app style="padding: 16px">
-      <h1> Hello Marshmallow </h1>
-      <h2><pre>&lt;m-button></pre></h2>
 
+<body>
+   <m-app style="padding: 16px">
+
+      <h1> Hello Marshmallow </h1>
+
+      <h2>
+         <pre>&lt;m-button></pre>
+      </h2>
+      
       <m-button> Button </m-button> <br> <br>
-      <m-button color="@Primary"> Primary Button </m-button> <br> <br>
-      <m-button color="@Secondary"> Secondary Button </m-button> <br> <br>
-      <m-button color="@Tertiary"> Tertiary Button </m-button> <br> <br>
-      <m-button color="@Error"> Error Button </m-button> <br> <br>
-      <m-button color="@Surface"> Surface Button </m-button> <br> <br>
+      <m-button color="@Primary"> @Primary Button </m-button> <br> <br>
+      <m-button color="@Secondary"> @Secondary Button </m-button> <br> <br>
+      <m-button color="@Tertiary"> @Tertiary Button </m-button> <br> <br>
       
    </m-app>
 </body>
+
 </html>
