--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <!-- Marshmallow Alpha -->
    <script type="module">
       import Marshmallow from './Marshmallow/Marshmallow.js';
-      let M = new Marshmallow();
+      let M = new Marshmallow({color: 'blue'});
    </script>
 </head>
 
@@ -26,6 +26,7 @@
       <m-button color="@Primary"> @Primary Button </m-button> <br> <br>
       <m-button color="@Secondary"> @Secondary Button </m-button> <br> <br>
       <m-button color="@Tertiary"> @Tertiary Button </m-button> <br> <br>
+      <m-button badge="30"> Badge Button </m-button> <br> <br>
       
    </m-app>
 </body>
