--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <m-button color="@Secondary"> @Secondary Button </m-button> <br> <br>
       <m-button color="@Tertiary"> @Tertiary Button </m-button> <br> <br>
       <m-button badge="30"> Badge Button </m-button> <br> <br>
+      <m-button badge="30" badge-color="@primary-container"> Badge Button </m-button> <br> <br>
       
    </m-app>
 </body>
