--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       <h2><pre>&lt;m-linear-progress></pre></h2>
       
       undefeated <m-linear-progress></m-linear-progress>
+      undefeated sharp <m-linear-progress sharp></m-linear-progress>
       0   <m-linear-progress value="0"></m-linear-progress>
       1   <m-linear-progress value="1"></m-linear-progress>
       25  <m-linear-progress value="25"></m-linear-progress>
