--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
       <h1> Hello Marshmallow </h1>
       <h2><pre>&lt;m-button></pre></h2>
       
-      <m-button progress="50"> Progress Button </m-button>
+      <m-button> Button </m-button>
+      <m-button outline> Outline Button </m-button>
+      <br><br>
+      <m-button full> Full Button </m-button>
+      <br>
+      <m-button color="@error" progress symbol="warning" symbolFill="1" outline> Error </m-button>
+      <br>
       
    </m-app>
 </body>
