--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <script type="module">
       import Marshmallow from './Marshmallow/Marshmallow.js';
       let M = new Marshmallow({
-         color: 'hsl(333,33%,33%)',
+         color: 'royal blue',
          theme: 'light',
          fontSize: 14,
       });
@@ -19,17 +19,7 @@
 
 <body>
    <m-app style="padding: 16px">
-      <h1> Hello Marshmallow </h1>
-      <h2><pre>&lt;m-button></pre></h2>
-      
-      <m-button> Button </m-button>
-      <m-button outline> Outline Button </m-button>
-      <br><br>
-      <m-button full> Full Button </m-button>
-      <br>
-      <m-button color="@error" progress symbol="warning" symbolFill="1" outline> Error </m-button>
-      <br>
-      
+
    </m-app>
 </body>
 </html>
