--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       import Marshmallow from './Marshmallow/Marshmallow.js';
       let M = new Marshmallow({
          color: 'royal blue',
-         theme: 'light',
+         theme: 'dark',
          fontSize: 14,
       });
    </script>
@@ -19,7 +19,11 @@
 
 <body>
    <m-app style="padding: 16px">
-
+      
+      <m-button>
+         leafweb.io@gmail.com
+      </m-button>
+      
    </m-app>
 </body>
 </html>
