--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
 
 <body>
    <!-- app -->
-   <m-app style="padding: 8px">
-      <center>
-         <h1>Marshmallow <span class="m-fixed" style="background: var(--m-primary); color: var(--m-on-primary); padding: 0 8px; border-radius: 8px"> 5.1 </span></h1>
-      </center>
-      <m-hr></m-hr>
-      <m-button>Button</m-button>
+   <m-app>
+         <center>
+            <h1>Marshmallow <span class="m-fixed" style="background: var(--m-primary); color: var(--m-on-primary); padding: 0 8px; border-radius: 8px"> 5.1 </span></h1>
+         </center>
+         <m-hr></m-hr>
+         <div style="padding: 16px">
+            <m-button> Button </m-button>
+         </div>
    </m-app>
+   
    <!-- script -->
    <script>
       let bundle = new Bundle('Marshmallow/bundle.json');
