--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </center>
       <m-hr></m-hr>
       <div style="padding: 16px">
-         <m-button> Button </m-button>
+         <m-button> Button </m-button> <m-switch></m-switch>
       </div>
    </m-app>
 
