--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
    <!-- app -->
    <m-app>
       <center>
-         <h1>Marshmallow <span class="m-fixed" style="background: var(--m-primary); color: var(--m-on-primary); padding: 0 8px; border-radius: 8px"> 5.1 </span></h1>
+         <h1>Marshmallow <small style="background: var(--m-primary); color: var(--m-on-primary); padding: 0 8px; border-radius: 8px"> ALPHA </small></h1>
       </center>
       <m-hr></m-hr>
       <div style="padding: 16px">
-         <m-button> Button </m-button> <m-switch></m-switch>
+         <m-switch></m-switch>
       </div>
    </m-app>
 
