--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <m-hr></m-hr>
       <div style="padding: 16px">
          <m-switch></m-switch>
+         <m-checkbox></m-checkbox>
       </div>
    </m-app>
 
