--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
       </center>
       <m-hr></m-hr>
       <div style="padding: 16px">
+         <m-button> Button </m-button>
+         <m-switch></m-switch>
          <m-switch></m-switch>
          <m-checkbox></m-checkbox>
+         <m-checkbox></m-checkbox>
+         <m-radio name="a"></m-radio>
+         <m-radio name="a"></m-radio>
       </div>
    </m-app>
 
