--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
          <m-checkbox></m-checkbox>
          <m-checkbox></m-checkbox>
          <m-radio name="a"></m-radio>
-         <m-radio name="a"></m-radio>
+         <m-radio name="a"></m-radio> 
+         <br> <br>
+         <m-range></m-range>
       </div>
    </m-app>
 
