--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
          <m-radio name="a"></m-radio>
          <m-radio name="a"></m-radio> 
          <br> <br>
-         <m-range></m-range>
+         <m-range disabled value="68"></m-range>
       </div>
    </m-app>
 
