--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
          <h1>Marshmallow <small style="background: var(--m-primary); color: var(--m-on-primary); padding: 0 8px; border-radius: 8px"> ALPHA </small></h1>
       </center>
       <m-hr></m-hr>
-      <div style="padding: 16px">
+      <div style="padding: 24px">
          <m-button> Button </m-button>
          <m-switch></m-switch>
          <m-switch></m-switch>
@@ -25,7 +25,10 @@
          <m-radio name="a"></m-radio>
          <m-radio name="a"></m-radio> 
          <br> <br>
-         <m-range></m-range>
+         <m-range></m-range> <br>
+         <m-range type="fancy"></m-range> <br>
+         <m-range type="simple"></m-range> <br>
+         <input type="range" style="width: 100%"/>
       </div>
    </m-app>
 
