--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
          
          <m-range></m-range> <br>
          <m-range type="simple"></m-range> <br>
+         
+         <m-progress color="@error"></m-progress> <br>
+         <m-progress sharp value="50"></m-progress>
 
       </div>
    </m-app>
