--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
          <m-range></m-range> <br>
          <m-range type="simple"></m-range> <br>
          
-         <m-progress color="@error"></m-progress> <br>
-         <m-progress sharp value="50"></m-progress>
+         <m-progress></m-progress> <br>
+         <m-progress value="22"></m-progress>
 
       </div>
    </m-app>
