--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
          <br><br>
          <m-range></m-range> <br>
          <m-range type="simple"></m-range> <br>
-         <m-progress></m-progress> <br>
-         <m-progress value="22"></m-progress>
+         <m-progress value="25"></m-progress> <br>
+         <m-progress></m-progress>
 
       </div>
    </m-app>
