--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-   <title>Marshmallow</title>
+   <title>Test</title>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -26,8 +26,8 @@
          <m-radio name="a"></m-radio>
          <m-radio name="a"></m-radio>
          <br><br>
-         <m-range></m-range> <br>
-         <m-range type="simple"></m-range> <br>
+         <m-range value="22"></m-range> <br>
+         <m-range value="22" type="simple"></m-range> <br>
          <m-progress value="25"></m-progress> <br>
          <m-progress></m-progress>
 
