--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
          <m-radio name="a"></m-radio>
          <m-radio name="a"></m-radio>
          <br><br>
-         <m-range value="22"></m-range> <br>
-         <m-range value="22" type="simple"></m-range> <br>
+         <m-range></m-range> <br>
+         <m-range type="simple"></m-range> <br>
          <m-progress value="25"></m-progress> <br>
-         <m-progress></m-progress>
-
+         <m-progress></m-progress> <br>
+         
       </div>
    </m-app>
 
