--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
          <br><br>
          <m-range></m-range> <br>
          <m-range type="simple"></m-range> <br>
-         <m-progress></m-progress> <br>
          
          <m-progress></m-progress> <br>
+         
+         <m-progress type="circular"></m-progress> <br>
 
       </div>
    </m-app>
