--- a/index.html
+++ b/index.html
@@ -13,27 +13,9 @@
    <!-- app -->
    <m-app>
       <center>
-         <h1>Marshmallow <small style="background: var(--m-primary); color: var(--m-on-primary); padding: 0 8px; border-radius: 8px"> ALPHA </small></h1>
+         <m-title>Marshmallow <small style="background: var(--m-primary); color: var(--m-on-primary); padding: 0 8px; border-radius: 8px"> ALPHA </small></m-title>
       </center>
       <m-hr></m-hr>
-      <div style="padding: 24px">
-
-         <m-button> Button </m-button>
-         <m-switch></m-switch>
-         <m-switch></m-switch>
-         <m-checkbox></m-checkbox>
-         <m-checkbox></m-checkbox>
-         <m-radio name="a"></m-radio>
-         <m-radio name="a"></m-radio>
-         <br><br>
-         <m-range></m-range> <br>
-         <m-range type="simple"></m-range> <br>
-         
-         <m-progress></m-progress> <br>
-         
-         <m-progress type="circular"></m-progress> <br>
-
-      </div>
    </m-app>
 
    <!-- script -->
