--- a/index.html
+++ b/index.html
@@ -16,6 +16,26 @@
          <m-title>Marshmallow <small style="background: var(--m-primary); color: var(--m-on-primary); padding: 0 8px; border-radius: 8px"> ALPHA </small></m-title>
       </center>
       <m-hr></m-hr>
+      <svg xmlns="http://www.w3.org/2000/svg" style="padding: 28px" width="100%" viewBox="0 0 1000 1000">
+         <defs>
+            <linearGradient id="fillGrad1" gradientTransform="rotate(135)">
+               <stop offset="0%" stop-color="var(--m-light-primary)" />
+               <stop offset="50%" stop-color="var(--m-primary)" />
+               <stop offset="100%" stop-color="var(--m-dark-primary)" />
+            </linearGradient>
+            <linearGradient id="fillGrad2" gradientTransform="rotate(135)">
+               <stop offset="0%" stop-color="var(--m-surface-container-high)" />
+               <stop offset="50%" stop-color="var(--m-surface)" />
+               <stop offset="100%" stop-color="var(--m-background)" />
+            </linearGradient>
+         </defs>
+         <path fill="var(--m-inverse-surface)" d="M500 ,0 C900 ,0 ,1000 ,100 ,1000 ,500 C1000 ,900 ,900 ,1000 ,500 ,1000 C100 ,1000 ,-0 ,900 ,-0 ,500 C-0 ,100 ,100 ,-0 ,500 ,-0 " />
+         <path fill="url(#fillGrad2)" d="M300 ,600 C400 ,600 ,500 ,300 ,700 ,200 C750 ,250 ,750 ,300 ,700 ,400 C600 ,400 ,500 ,700 ,300 ,800 C250 ,750 ,250 ,700 ,300 ,600 z" />
+         <path fill="url(#fillGrad2)" d="M550 ,200 C350 ,100 ,200 ,250 ,300 ,450 L550 ,200 z" />
+         <path fill="url(#fillGrad2)" d="M700 ,550 C800 ,750 ,650 ,900 ,450 ,800 L700 ,550 z" />
+         <path fill="url(#fillGrad1)" d="M300 ,600 C400 ,600 ,500 ,300 ,700 ,200 C550 ,50 ,150 ,400 ,300 ,600 z" />
+         <path fill="url(#fillGrad1)" d="M300 ,800 C500 ,700 ,600 ,400 ,700 ,400 C862.07,543.24,450 ,950 ,300 ,800 z" />
+      </svg>
    </m-app>
 
    <!-- script -->
