--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
    <!-- app -->
    <m-app>
       <center>
-         <m-title> 
-            Marshmallow <m-badge size="large"> ALPHA </m-badge> </m-title>
+         <m-title> Marshmallow <m-badge size="large"> ALPHA </m-badge> </m-title>
       </center>
       <m-hr></m-hr>
       
