--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
          <m-title> Marshmallow <m-badge size="large"> ALPHA </m-badge> </m-title>
       </center>
       <m-hr></m-hr>
+      <div style="padding: 24px">
+         <m-icon size="100px" name="tv"></m-icon>
+      </div>
       
    </m-app>
 
