--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
       </center>
       <m-hr></m-hr>
       <div style="padding: 24px">
-         <m-icon size="100px" name="tv"></m-icon>
+         <m-animation count="2">
+            <m-icon size="100px" name="tv"></m-icon>
+         </m-animation>
       </div>
       
    </m-app>
