--- a/index.html
+++ b/index.html
@@ -6,11 +6,6 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <script src="Marshmallow/bundle.now.js"></script>
-   <style>
-      :root{
-         --m-animation-dur: 0.1s;
-      }
-   </style>
 </head>
 <body>
    <!-- app -->
@@ -21,7 +16,7 @@
       <m-hr></m-hr>
       <div style="padding: 24px">
          
-         <m-animation name="zoom" count="1">
+         <m-animation name="zoom">
             <m-icon size="100px" name="heart"></m-icon>
          </m-animation>
          
