--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <m-hr></m-hr>
       <div style="padding: 24px">
          
-         <m-animation name="zoom">
+         <m-animation name="heart-beat">
             <m-icon size="100px" name="heart"></m-icon>
          </m-animation>
          
