--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <m-hr></m-hr>
       <m-pad>
 
-         <m-animation name="heart-beat">
+         <m-animation name="heart-beat" onclick="this.restart()">
             <m-icon size="100px" name="heart"></m-icon>
          </m-animation>
 
