--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
          <m-title> Marshmallow <m-badge size="large"> ALPHA </m-badge> </m-title>
       </center>
       <m-hr></m-hr>
-      <m-pad>
-
-         <m-animation name="heart-beat" onclick="this.restart()">
-            <m-icon size="100px" name="heart"></m-icon>
+      <div style="padding: 16px; text-align: center">
+         <m-animation name="jello-y" dur="1s" count="infinite" onclick="this.toggleStartPause()">
+            
+            <m-icon color="@primary" size="100px" name="tv"></m-icon>
+            
          </m-animation>
 
-      </m-pad>
+      </div>
    </m-app>
 
    <script>
