--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
          <m-animation name="jello-y" dur="1s" count="infinite" onclick="this.toggleStartPause()">
             <m-icon color="@primary" size="100px" name="tv"></m-icon>
          </m-animation>
+         
+         <m-hr></m-hr>
+         
+         <m-range min="0" max="1" step="0.01"></m-range>
+         <br>
+         <m-button> Start </m-button>
+         <m-button> End </m-button>
+         <m-button> Restart </m-button>
 
       </div>
    </m-app>
