--- a/index.html
+++ b/index.html
@@ -6,32 +6,48 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-   <script src="Marshmallow/bundle.now.js"></script>
+   <!-- <script src="Marshmallow/bundle.now.js"></script> -->
+   <script src="Marshmallow.ALPHA.js"></script>
+   <script>
+      let M = new Marshmallow();
+   </script>
 </head>
 
 <body>
    <!-- app -->
    <m-app style="padding: 24px;">
       
-      <h1>
-         <m-icon name="lightbulb"></m-icon>
-      </h1>
+      <fa-s name="candle-holder"></fa-s> 
+      <fa-ss name="candle-holder"></fa-ss> 
+      <fa-ds name="candle-holder"></fa-ds> 
+      <fa-sds name="candle-holder"></fa-sds> 
+      <br>
+      <fa-r name="candle-holder"></fa-r>
+      <fa-sr name="candle-holder"></fa-sr>
+      <fa-dr name="candle-holder"></fa-dr>
+      <fa-sdr name="candle-holder"></fa-sdr>
+      <br>
+      <fa-sl name="candle-holder"></fa-sl>
+      <fa-sl name="candle-holder"></fa-sl>
+      <fa-dl name="candle-holder"></fa-dl>
+      <fa-sdl name="candle-holder"></fa-sdl>
+      <br>
+      <fa-st name="candle-holder"></fa-st>
+      <fa-st name="candle-holder"></fa-st>
+      <fa-dt name="candle-holder"></fa-dt>
+      <fa-sdt name="candle-holder"></fa-sdt>
       
    </m-app>
-   
-   
-   
-   
-
-   <script>
+   <!-- <script>
       let bundle = new Bundle('Marshmallow/bundle.json');
       bundle.onrender = () => {
+         bundle.download();
          bundle.apply();
          bundle.onapply = () => new Marshmallow({
-            color: 'hsl(165 80 50)',
+            theme: 'dark'
          });
       }
-   </script>
+   </script> -->
 </body>
 
 </html>
